# omi-python-classes

./: License  ReadMe.md  pyproject.toml
.github/workflows/: pytest.yml
examples/: example_iex_equities_deep_iextp_v1_0_6.py  example_iex_equities_deep_iextp_v1_0_8.py  example_iex_equities_deepplus_iextp_v1_0_1.py  example_iex_equities_tops_iextp_v1_5_6.py  example_iex_equities_tops_iextp_v1_6_4.py  example_iex_equities_tops_iextp_v1_6_6.py  example_nasdaq_nsmequities_totalview_itch_v5_0.py
src/omipy/iex/: ReadMe.md
src/omipy/iex/equities/deep/: v1_0_6.py  v1_0_8.py
src/omipy/iex/equities/deepplus/: v1_0_1.py
src/omipy/iex/equities/tops/: v1_5_6.py  v1_6_4.py  v1_6_6.py
src/omipy/nasdaq/: ReadMe.md
src/omipy/nasdaq/nsmequities/totalview/: v5_0.py
tests/: conftest.py  test_iex_equities_tops_iextp_v1_6_6.py  test_nasdaq_nsmequities_totalview_itch_v5_0.py
